# carsalon

./: LICENSE  docker-compose.env  docker-compose.yml  manage.py  pyproject.toml
cars/: admin.py  models.py  serializers.py  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_car_category.py
carsalon/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
docker/nginx/: default_location
